processed in the original proof context as far as possible, before
operating on the goal state.  In any case, the standard discipline for
subgoal-addressing needs to be observed: no subgoals or a subgoal
number that is out of range produces an empty result sequence, not an
exception.  Potential INCOMPATIBILITY for non-conformant tactical
proof tools.


*** Prover IDE -- Isabelle/Scala/jEdit ***

* Auxiliary files ('ML_file' etc.) are managed by the Prover IDE.
Open text buffers take precedence over copies within the file-system.

* Improved support for Isabelle/ML, with jEdit mode "isabelle-ml" for
auxiliary ML files.

* Improved completion based on context information about embedded
languages: keywords are only completed for outer syntax, symbols or
antiquotations for languages that support them.  E.g. no symbol
completion for ML source, but within ML strings, comments,
antiquotations.

* Semantic completions may get extended by appending a suffix of
underscores to an already recognized name, e.g. "foo_" to complete
"foo" or "foobar" if these are known in the context.  The special
identifier "__" serves as a wild-card in this respect: it completes to
the full collection of names from the name space (truncated according
to the system option "completion_limit").

* Document panel: simplied interaction where every single mouse click
(re)opens document via desktop environment or as jEdit buffer.

* Option "jedit_print_mode" (see also "Plugin Options / Isabelle /
General") allows to specify additional print modes for the prover
process, without requiring old-fashioned command-line invocation of
"isabelle jedit -m MODE".

* New panel: Simplifier trace.  Provides an interactive view of the
simplification process, enabled by the newly-introduced
"simplifier_trace" declaration.


*** Pure ***

* Basic constants of Pure use more conventional names and are always
qualified.  Rare INCOMPATIBILITY, but with potentially serious